Some code review updates